# twtsn

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
backend/: Cargo.toml
backend/migrations/: 20230717005939_init.down.sql  20230717005939_init.up.sql
backend/scripts/: destroy_db.sh  init_db.sh
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  trunk.toml
frontend/cases/exhibitions/: test2.md  test5.md
frontend/cases/instruments/: test4.md
frontend/cases/translations/: test3.md
frontend/cases/venues/: test2.md
frontend/src/: app.rs  lib.rs  main.rs  store.rs  utils.rs
frontend/src/api/: cases.rs
frontend/src/components/: accordion.rs  bulletin.rs  button.rs  carousel.rs  case.rs  contact_form.rs  dropdown_menu.rs  email_bar.rs  go_back.rs  language_switcher.rs  mod.rs  msg_box.rs  news.rs  news_letter.rs
frontend/src/layout/: footer.rs  navbar.rs
frontend/src/modules/: lang.rs  mod.rs  router.rs  store.rs  utils.rs
frontend/src/pages/: contact.rs  home.rs  mod.rs  not_found.rs  not_found_404.rs  services.rs
frontend/src/pages/cases/: case_page.rs  mod.rs
frontend/style/: output.css
modules/news/: .news_headlines  fetch_news.py
