[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
