[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version="0.7", features=["BootstrapFacebook", "FontAwesomeSolidLocationDot", "FontAwesomeSolidEnvelope", "FontAwesomeSolidSquarePhone" ]}
