[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version="0.7", features=["BootstrapFacebook", "FontAwesomeSolidLocationDot", "FontAwesomeSolidEnvelope", "FontAwesomeSolidSquarePhone" ]}
gloo = "0.8.1"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
uuid = { version = "1.4.0", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Window"] }
yewdux = "0.9.3"
yew-router = "0.17.0"
